--- a/FileProcessing.API/Views/Parsing/GetAll.cshtml
+++ b/FileProcessing.API/Views/Parsing/GetAll.cshtml
@@ -2,9 +2,9 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
-    @using FileProcessingDB.FileProcessingDTO;
+    @using FileProcessingDB.DataModel;
     
-    @model IEnumerable<BaseRateDTO>
+    @model IEnumerable<BaseRate>
 
     <!DOCTYPE html>
 
@@ -19,7 +19,7 @@
             foreach (var baseRate in Model)
             {
                 <div>
-                    <h2>BaseRate @count | @baseRate.Value | @baseRate.TotalTerm | @baseRate.LastModified | @baseRate.IdAdv | @baseRate.IdAm | @baseRate.IdCr | @baseRate.IdL | @baseRate.IdPr | @baseRate.IdSt</h2>
+                    <h2>BaseRate @count | @baseRate.Value | @baseRate.TotalTerm | @baseRate.LastModified | @baseRate.Advertiser.Name  | @baseRate.Amount.Min | @baseRate.Amount.Max | @baseRate.CreditScore.Min | @baseRate.CreditScore.Max | @baseRate.Ltv.Min | @baseRate.Ltv.Max | @baseRate.ProductType.Name | @baseRate.State.Name</h2>
                 </div>
                 count++;
             }
