The code was made more readable, the "dead code" and some unnecessary files were removed, made output data in table.

--- a/FileProcessing.API/Views/Parsing/GetAll.cshtml
+++ b/FileProcessing.API/Views/Parsing/GetAll.cshtml
@@ -1,7 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
     @using FileProcessingDB.DataModel;
     
     @model IEnumerable<BaseRate>
@@ -9,22 +6,52 @@
     <!DOCTYPE html>
 
     <html>
-    <head>
-        <meta name="viewport" content="width=device-width" />
-        <title>List</title>
-    </head>
-    <body>
-        <h2> All baserates</h2>
-        @{int count = 1;
-            foreach (var baseRate in Model)
-            {
-                <div>
-                    <h2>BaseRate @count | @baseRate.Value | @baseRate.TotalTerm | @baseRate.LastModified | @baseRate.Advertiser.Name  | @baseRate.Amount.Min | @baseRate.Amount.Max | @baseRate.CreditScore.Min | @baseRate.CreditScore.Max | @baseRate.Ltv.Min | @baseRate.Ltv.Max | @baseRate.ProductType.Name | @baseRate.State.Name</h2>
-                </div>
-                count++;
-            }
 
-        }
+    <head>
+        <meta name="AllBaseRates" content="width=device-width" />
+        <title>AllBaseRates</title>
+    </head>
+
+    <body>
+        <h2 align="center"> All baserates</h2>
+        <table style="width:100%" border="1">
+            <tr>
+                <th>Advertiser</th>
+                <th>IdAdvertiser</th>
+                <th>ProductType</th>
+                <th>State</th>
+                <th>minLtv</th>
+                <th>maxLtv</th>
+                <th>minAmount</th>
+                <th>maxAmount</th>
+                <th>minCreditScore</th>
+                <th>maxCreditScore</th>
+                <th>BaseRate</th>
+                <th>TotalTerm</th>
+                <th>LastModified</th>
+            </tr>
+            @{int count = 1;
+                foreach (var baseRate in Model)
+                {
+                        <tr>
+                            <th>@baseRate.Advertiser.Name</th>
+                            <th>@baseRate.Advertiser.Id</th>
+                            <th>@baseRate.ProductType.Name</th>
+                            <th>@baseRate.State.Name</th>
+                            <th>@baseRate.Ltv.Min</th>
+                            <th>@baseRate.Ltv.Max</th>
+                            <th>@baseRate.Amount.Min</th>
+                            <th>@baseRate.Amount.Max</th>
+                            <th>@baseRate.CreditScore.Min</th>
+                            <th>@baseRate.CreditScore.Max</th>
+                            <th>@baseRate.Value</th>
+                            <th>@baseRate.TotalTerm</th>
+                            <th>@baseRate.LastModified</th>
+                        </tr>
+                    count++;
+                }
+            }
+        </table>        
     </body>
 </html>
 }
